force-app/main/default/objects/AccessTest__c/AccessTest__c.object-meta.xml
<CustomObject>
    <label>AccessTest</label>
    <nameField>
        <label>AccessTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccessTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>