force-app/main/default/objects/AccessTest__c/fields/MyHouse__c.field-meta.xml
<CustomField>
    <fullName>MyHouse__c</fullName>
    <label>MyHouse</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>