force-app/main/default/objects/AccessTest__c/fields/TestMasterLF__c.field-meta.xml
<CustomField>
    <fullName>TestMasterLF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestMasterLF</label>
    <referenceTo>TestMasterObj__c</referenceTo>
    <relationshipLabel>AccessTests</relationshipLabel>
    <relationshipName>AccessTests</relationshipName>
    <type>Lookup</type>
</CustomField>