force-app/main/default/objects/AccessTest__c/fields/TestPickListField__c.field-meta.xml
<CustomField>
    <fullName>TestPickListField__c</fullName>
    <label>TestPickListField</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
            <value>
                <fullName>Test4</fullName>
            </value>
            <value>
                <fullName>Test5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>