force-app/main/default/objects/AccessTest__c/validationRules/Look_Up_Field_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Look_Up_Field_VR</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TestMasterLF__c)</errorConditionFormula>
    <errorDisplayField>TestMasterLF__c</errorDisplayField>
    <errorMessage>TestMasrt Obj field doesn&apos;t have any value</errorMessage>
</ValidationRule>